ie6 layout bugs

--- a/app/webroot/static/experimental/css/viewproject.css
+++ b/app/webroot/static/experimental/css/viewproject.css
@@ -21,6 +21,11 @@ body {
  margin-right: 5px;
 }
 
+.logo {
+ width: 300px;
+ float: left;
+}
+
 
 .help {
  width: auto;
